style: remove trailing periods from H2 headings (uk/ru/en/pl/cs)
Made-with: Cursor

--- a/cs/index.html
+++ b/cs/index.html
@@ -142,7 +142,7 @@
     <section id="problem-solution">
         <div class="container">
             <div class="section-header">
-                <h2>Více než známky: skutečný pokrok vašeho žáka.</h2>
+                <h2>Více než známky: skutečný pokrok vašeho žáka</h2>
                 <p>V moderním vzdělávání je často obtížné vidět celkový obraz rozvoje dítěte. Tradiční metody hodnocení
                     ne vždy odrážejí skutečný kognitivní růst.</p>
             </div>
@@ -172,7 +172,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>Podívejte se na Neuro Educatimo v akci.</h2>
+                <h2>Podívejte se na Neuro Educatimo v akci</h2>
                 <p>Podívejte se na krátké video a zjistěte, jak naše platforma pomáhá digitalizovat a vizualizovat
                     kognitivní pokrok dětí, čímž činí proces učení transparentním a efektivním.</p>
             </div>
@@ -255,7 +255,7 @@
     <section id="demo">
         <div class="container">
             <div class="section-header">
-                <h2>Neuro Educatimo: Váš kompas ve světě kognitivního rozvoje.</h2>
+                <h2>Neuro Educatimo: Váš kompas ve světě kognitivního rozvoje</h2>
                 <p class="demo-sub">Co dostane vaše centrum a rodiče</p>
                 <p>Zpráva s kognitivním profilem dítěte — pod značkou vaší školy. Panel pedagoga s dynamikou rozvoje každého žáka.</p>
             </div>
@@ -301,7 +301,7 @@
     <section id="features">
         <div class="container">
             <div class="section-header">
-                <h2>Funkce, které mění přístup k výuce.</h2>
+                <h2>Funkce, které mění přístup k výuce</h2>
                 <p>Neuro Educatimo nabízí komplexní sadu nástrojů pro všestrannou analýzu a podporu kognitivního rozvoje
                     každého dítěte.</p>
             </div>
@@ -371,7 +371,7 @@
     <section id="about-us-reviews">
         <div class="container">
             <div class="section-header">
-                <h2>Naše odbornost a recenze klientů.</h2>
+                <h2>Naše odbornost a recenze klientů</h2>
                 <p>Neuro Educatimo je vytvořeno týmem expertů v kognitivní psychologii a IT. Záleží nám na důkazech a
                     efektivitě.</p>
             </div>
@@ -558,7 +558,7 @@
     <section id="registration">
         <div class="container">
             <div class="section-header">
-                <h2>Budoucnost vzdělávání začíná zde.</h2>
+                <h2>Budoucnost vzdělávání začíná zde</h2>
                 <p>Staňte se jedním z prvních, kdo získá přístup k Neuro Educatimo. Připojte se k pilotnímu programu a
                     otestujte platformu zdarma a pomozte utvářet její rozvoj.</p>
             </div>
