--- a/en/index.html
+++ b/en/index.html
@@ -142,7 +142,7 @@
     <section id="problem-solution">
         <div class="container">
             <div class="section-header">
-                <h2>More than grades: the true progress of your student.</h2>
+                <h2>More than grades: the true progress of your student</h2>
                 <p>In modern education, it is often difficult to see the full picture of a child's development.
                     Traditional assessment methods do not always reflect real cognitive growth.</p>
             </div>
@@ -172,7 +172,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>Watch Neuro Educatimo in Action.</h2>
+                <h2>Watch Neuro Educatimo in Action</h2>
                 <p>Watch a short video to learn how our platform helps digitize and visualize children's cognitive
                     progress, making the learning process transparent and effective.</p>
             </div>
@@ -254,7 +254,7 @@
     <section id="demo">
         <div class="container">
             <div class="section-header">
-                <h2>Neuro Educatimo: Your compass in the world of cognitive development.</h2>
+                <h2>Neuro Educatimo: Your compass in the world of cognitive development</h2>
                 <p class="demo-sub">What your center and parents receive</p>
                 <p>A report with the child's cognitive profile — under your school's brand. A teacher dashboard with each student's development dynamics.</p>
             </div>
@@ -300,7 +300,7 @@
     <section id="features">
         <div class="container">
             <div class="section-header">
-                <h2>Features that change the approach to learning.</h2>
+                <h2>Features that change the approach to learning</h2>
                 <p>Neuro Educatimo offers a comprehensive set of tools for the comprehensive analysis and support of
                     every child's cognitive development.</p>
             </div>
@@ -371,7 +371,7 @@
     <section id="about-us-reviews">
         <div class="container">
             <div class="section-header">
-                <h2>Our expertise and client reviews.</h2>
+                <h2>Our expertise and client reviews</h2>
                 <p>Neuro Educatimo is created by a team of experts in cognitive psychology and IT. We care about
                     evidence and effectiveness.</p>
             </div>
@@ -561,7 +561,7 @@
     <section id="registration">
         <div class="container">
             <div class="section-header">
-                <h2>The future of education starts here.</h2>
+                <h2>The future of education starts here</h2>
                 <p>Be one of the first to gain access to Neuro Educatimo. Join the pilot program to test the platform
                     for free and help shape its development.</p>
             </div>
