--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <section id="problem-solution">
         <div class="container">
             <div class="section-header">
-                <h2>Больше, чем оценки: истинный прогресс вашего ученика.</h2>
+                <h2>Больше, чем оценки: истинный прогресс вашего ученика</h2>
                 <p>В современном образовании зачастую сложно увидеть полную картину развития ребенка. Традиционные
                     методы оценки не всегда отражают реальный когнитивный рост.</p>
             </div>
@@ -168,7 +168,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>Посмотрите Neuro Educatimo в действии.</h2>
+                <h2>Посмотрите Neuro Educatimo в действии</h2>
                 <p>Посмотрите короткое видео, чтобы узнать, как наша платформа помогает оцифровывать и визуализировать
                     когнитивный прогресс детей, делая процесс обучения прозрачным и эффективным.</p>
             </div>
@@ -251,7 +251,7 @@
     <section id="demo">
         <div class="container">
             <div class="section-header">
-                <h2>Neuro Educatimo: Ваш компас в мире когнитивного развития.</h2>
+                <h2>Neuro Educatimo: Ваш компас в мире когнитивного развития</h2>
                 <p class="demo-sub">Что получает ваш центр и ваши родители</p>
                 <p>Отчёт с когнитивным профилем ребёнка — под брендом вашей школы. Кабинет педагога с динамикой развития каждого ученика.</p>
             </div>
@@ -297,7 +297,7 @@
     <section id="features">
         <div class="container">
             <div class="section-header">
-                <h2>Возможности, которые меняют подход к обучению.</h2>
+                <h2>Возможности, которые меняют подход к обучению</h2>
                 <p>Neuro Educatimo предлагает комплекс инструментов для всестороннего анализа и поддержки когнитивного
                     развития каждого ребенка.</p>
             </div>
@@ -367,7 +367,7 @@
     <section id="about-us-reviews">
         <div class="container">
             <div class="section-header">
-                <h2>Наша экспертиза и отзывы клиентов.</h2>
+                <h2>Наша экспертиза и отзывы клиентов</h2>
                 <p>Neuro Educatimo создан командой экспертов в области когнитивной психологии и IT. Мы заботимся о
                     доказательности и эффективности.</p>
             </div>
@@ -563,7 +563,7 @@
     <section id="registration">
         <div class="container">
             <div class="section-header">
-                <h2>Будущее образования начинается здесь.</h2>
+                <h2>Будущее образования начинается здесь</h2>
                 <p>Станьте одним из первых, кто получит доступ к Neuro Educatimo. Присоединяйтесь к пилотной программе,
                     чтобы протестировать платформу бесплатно и помочь сформировать ее развитие.</p>
             </div>
