--- a/pl/index.html
+++ b/pl/index.html
@@ -142,7 +142,7 @@
     <section id="problem-solution">
         <div class="container">
             <div class="section-header">
-                <h2>Więcej niż oceny: rzeczywisty postęp Twojego ucznia.</h2>
+                <h2>Więcej niż oceny: rzeczywisty postęp Twojego ucznia</h2>
                 <p>We współczesnej edukacji często trudno jest zobaczyć pełny obraz rozwoju dziecka. Tradycyjne metody
                     oceny nie zawsze odzwierciedlają rzeczywisty wzrost poznawczy.</p>
             </div>
@@ -172,7 +172,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>Obejrzyj Neuro Educatimo w akcji.</h2>
+                <h2>Obejrzyj Neuro Educatimo w akcji</h2>
                 <p>Obejrzyj krótki film, aby dowiedzieć się, jak nasza platforma pomaga digitalizować i wizualizować
                     postępy poznawcze dzieci, czyniąc proces nauki przejrzystym i skutecznym.</p>
             </div>
@@ -255,7 +255,7 @@
     <section id="demo">
         <div class="container">
             <div class="section-header">
-                <h2>Neuro Educatimo: Twój kompas w świecie rozwoju poznawczego.</h2>
+                <h2>Neuro Educatimo: Twój kompas w świecie rozwoju poznawczego</h2>
                 <p class="demo-sub">Co otrzymuje Twoje centrum i rodzice</p>
                 <p>Raport z profilem poznawczym dziecka — pod marką Twojej szkoły. Panel nauczyciela z dynamiką rozwoju każdego ucznia.</p>
             </div>
@@ -301,7 +301,7 @@
     <section id="features">
         <div class="container">
             <div class="section-header">
-                <h2>Funkcje, które zmieniają podejście do nauczania.</h2>
+                <h2>Funkcje, które zmieniają podejście do nauczania</h2>
                 <p>Neuro Educatimo oferuje kompleksowy zestaw narzędzi do wszechstronnej analizy i wsparcia rozwoju
                     poznawczego każdego dziecka.</p>
             </div>
@@ -371,7 +371,7 @@
     <section id="about-us-reviews">
         <div class="container">
             <div class="section-header">
-                <h2>Nasza ekspertyza i recenzje klientów.</h2>
+                <h2>Nasza ekspertyza i recenzje klientów</h2>
                 <p>Neuro Educatimo zostało stworzone przez zespół ekspertów w dziedzinie psychologii poznawczej i IT.
                     Dbamy o dowody i skuteczność.</p>
             </div>
@@ -563,7 +563,7 @@
     <section id="registration">
         <div class="container">
             <div class="section-header">
-                <h2>Przyszłość edukacji zaczyna się tutaj.</h2>
+                <h2>Przyszłość edukacji zaczyna się tutaj</h2>
                 <p>Bądź jednym z pierwszych, którzy uzyskają dostęp do Neuro Educatimo. Dołącz do programu pilotażowego,
                     aby przetestować platformę za darmo i pomóc kształtować jej rozwój.</p>
             </div>
