--- a/uk/index.html
+++ b/uk/index.html
@@ -142,7 +142,7 @@
     <section id="problem-solution">
         <div class="container">
             <div class="section-header">
-                <h2>Більше, ніж оцінки: істинний прогрес вашого учня.</h2>
+                <h2>Більше, ніж оцінки: істинний прогрес вашого учня</h2>
                 <p>У сучасній освіті часто складно побачити повну картину розвитку дитини. Традиційні методи оцінювання
                     не завжди відображають реальне когнітивне зростання.</p>
             </div>
@@ -172,7 +172,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>Перегляньте Neuro Educatimo у дії.</h2>
+                <h2>Перегляньте Neuro Educatimo у дії</h2>
                 <p>Перегляньте коротке відео, щоб дізнатися, як наша платформа допомагає оцифровувати та візуалізувати
                     когнітивний прогрес дітей, роблячи процес навчання прозорим та ефективним.</p>
             </div>
@@ -255,7 +255,7 @@
     <section id="demo">
         <div class="container">
             <div class="section-header">
-                <h2>Neuro Educatimo: Ваш компас у світі когнітивного розвитку.</h2>
+                <h2>Neuro Educatimo: Ваш компас у світі когнітивного розвитку</h2>
                 <p class="demo-sub">Що отримує ваш центр і ваші батьки</p>
                 <p>Звіт з когнітивним профілем дитини — під брендом вашої школи. Кабінет педагога з динамікою розвитку кожного учня.</p>
             </div>
@@ -301,7 +301,7 @@
     <section id="features">
         <div class="container">
             <div class="section-header">
-                <h2>Можливості, які змінюють підхід до навчання.</h2>
+                <h2>Можливості, які змінюють підхід до навчання</h2>
                 <p>Neuro Educatimo пропонує комплекс інструментів для всебічного аналізу та підтримки когнітивного
                     розвитку кожної дитини.</p>
             </div>
@@ -370,7 +370,7 @@
     <section id="about-us-reviews">
         <div class="container">
             <div class="section-header">
-                <h2>Наша експертиза та відгуки клієнтів.</h2>
+                <h2>Наша експертиза та відгуки клієнтів</h2>
                 <p>Neuro Educatimo створено командою експертів у сфері когнітивної психології та IT. Ми дбаємо про
                     доказовість та ефективність.</p>
             </div>
@@ -560,7 +560,7 @@
     <section id="registration">
         <div class="container">
             <div class="section-header">
-                <h2>Майбутнє освіти починається тут.</h2>
+                <h2>Майбутнє освіти починається тут</h2>
                 <p>Станьте одним із перших, хто отримає доступ до Neuro Educatimo. Приєднуйтесь до пілотної програми,
                     щоб протестувати платформу безкоштовно та допомогти сформувати її розвиток.</p>
             </div>
